npm build:tailwind funcional con input de informacion agregada.Figuras con rounded posicionadas de manera correcta

--- a/public/index.html
+++ b/public/index.html
@@ -142,7 +142,7 @@
           right-0
           lg:
           -bottom-28
-          lg:-right-36
+          lg:w-2/5
         "
       ></div>
     </section>
@@ -286,15 +286,18 @@
         <div
           class="
             hidden
-            lg:block
+            md:block
             overflow-hidden
             bg-bookmark-purple
             rounded-l-full
             absolute
             h-80
             w-2/4
-            -bottom-24
-            -right-36
+            top-32
+            right-0
+            lg:
+            -bottom-28
+            lg:w-2/5
           "
         ></div>
       </div>
